Playing with the preface, trying to avoid latex syntax errors.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65338 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -29,8 +29,8 @@
 \usepackage{hevea}
 \usepackage{upquote}
 
-\newcommand{\thetitle}{Think Python: How to Think Like a Computer Scientist}
-\newcommand{\theversion}{1.1.21}
+\newcommand{\thetitle}{Python for Informatics: Exploring Information}
+\newcommand{\theversion}{0.0.1}
 
 \makeindex
 
@@ -60,8 +60,8 @@
 \vspace*{2.0in}
 
 \begin{spacing}{3}
-{\huge Think Python}\\
-{\Large How to Think Like a Computer Scientist}
+{\huge Python for Informatics}\\
+{\Large Exploring Information}
 \end{spacing}
 
 \vspace{0.25in}
@@ -89,8 +89,8 @@ Version \theversion
 \vspace*{2.0in}
 
 \begin{spacing}{3}
-{\huge Think Python}\\
-{\Large How to Think Like a Computer Scientist}
+{\huge Python for Informatics}\\
+{\Large Exploring Information}
 \end{spacing}
 
 \vspace{0.25in}
@@ -102,6 +102,7 @@ Version \theversion
 
 {\Large
 Allen Downey\\
+Charles Severance\\
 }
 
 
@@ -122,7 +123,7 @@ Allen Downey\\
 \thispagestyle{empty}
 
 {\small
-Copyright \copyright ~2008 Allen Downey.
+Copyright \copyright ~2009 Charles Severance.
 
 
 Printing history:
@@ -139,15 +140,21 @@ a Computer Scientist}.
 {\em Think Python: How to Think Like
 a Computer Scientist}.
 
+\item[December 2009:] Begine the work to remix 
+{\em Think Python: How to Think Like
+a Computer Scientist}
+to produce 
+{\em Python for Informatics: Exploring Information}
+
 \end{description}
 
 \vspace{0.2in}
 
-\begin{flushleft}
-Green Tea Press       \\
-9 Washburn Ave \\
-Needham MA 02492
-\end{flushleft}
+% \begin{flushleft}
+% Green Tea Press       \\
+% 9 Washburn Ave \\
+% Needham MA 02492
+% \end{flushleft}
 
 Permission is granted to copy, distribute, and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1 or
@@ -163,8 +170,13 @@ The original form of this book is \LaTeX\ source code.  Compiling this
 representation of a textbook, which can be converted to other formats
 and printed.
 
-The \LaTeX\ source for this book is available from
-\url{http://www.thinkpython.com}
+The \LaTeX\ source for the 
+{\em Think Python} version of this book is available from
+\url{http://www.thinkpython.com}.
+The \LaTeX\ source for the 
+{\em Python for Informatics}
+version of the book is available (for the moment) from 
+\url{https://source.sakaiproject.org/contrib//csev/trunk/pyinf/}.
 
 \vspace{0.2in}
 
@@ -191,7 +203,50 @@ Version \theversion
 
 \chapter{Preface}
 
-\section*{The strange history of this book}
+\section*{Remixing an Open Book}
+
+It is quite natural for academics who are continuously told to 
+"publish or perish" to want to always create something new that is 
+their own contribution.   This book is an experiment in "re-mixing"
+an earlier book titled
+{\em Think Python: How to Think Like
+a Computer Scientist}
+written by Allan B. Downey, Jeff Elkner and others.
+
+In the Fall of 2009, I had taught the course SI502 - Networked Computing
+a for four straight semesters using Python and really felt the 
+need for a decidedly non-Computer Science text.  My goal in the course
+was to teach people life-long data handling skills using Python.  Few of my
+students would ever be professional computer programmers - instead, they
+would be librarians, managers, lawyers, biologists, economists, etc.
+In short, they represented every field outside of Computer Science.
+
+I could not find the perfect book for my course.  There were many books 
+on how to get started on the career path of the Computer Scientist but no
+books for folks who just wanted to really master and understand how
+computers worked so they could use them in their lives - whatever their 
+chosen career or vocation.
+
+That said, 
+{\em Think Python} 
+was an excellent starting point for 
+{\em Python for Informatics} 
+because is was well written, using language that someone just
+starting out could understand.
+
+So we shall see where this remixing goes and see how well the book
+turns out.
+
+Charles Severance
+December 17, 2009
+
+Charles Severance is a 
+Clinical Assistant Professor 
+at the University of Michigan School of Information.
+
+\section*{The strange history of "Think Python"}
+
+(Allan B. Downey)
 
 In January 1999 I was preparing to teach an introductory programming
 class in Java.  I had taught it three times and I was getting
