--- a/book.tex
+++ b/book.tex
@@ -13,7 +13,6 @@
 % Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 %
 
-
 %\documentclass[10pt,b5paper]{book}
 \documentclass[10pt]{book}
 \usepackage[width=5.5in,height=8.5in,
@@ -216,7 +215,7 @@ a Computer Scientist}
 written by Allan B. Downey, Jeff Elkner and others.
 
 In the Fall of 2009, I had taught the course SI502 - Networked Computing
-a for four straight semesters using Python and really felt the 
+for four straight semesters using Python and really felt the 
 need for a decidedly non-Computer Science text.  My goal in the course
 was to teach people life-long data handling skills using Python.  Few of my
 students would ever be professional computer programmers - instead, they
