Restructure front matter
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@65391 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/book.tex
+++ b/book.tex
@@ -214,7 +214,7 @@ experiment in "re-mixing"
 an book titled
 {\em Think Python: How to Think Like
 a Computer Scientist}
-written by Allan B. Downey, Jeff Elkner and others.
+written by Allen B. Downey, Jeff Elkner and others.
 
 In the Fall of 2009, I had taught the course SI502 - Networked Computing
 for four straight semesters using Python and really felt the 
@@ -247,9 +247,11 @@ Charles Severance is a
 Clinical Assistant Professor 
 at the University of Michigan School of Information.
 
-\section*{The strange history of "Think Python"}
+\section*{Preface for ``Think Python''}
 
-(Allan B. Downey)
+\subsection*{The strange history of ``Think Python''}
+
+(Allen B. Downey)
 
 In January 1999 I was preparing to teach an introductory programming
 class in Java.  I had taught it three times and I was getting
@@ -334,21 +336,9 @@ Needham MA\\
 Allen Downey is an Associate Professor of Computer Science at 
 the Franklin W. Olin College of Engineering.
 
+\subsection*{Acknowledgements for ``Think Python''}
 
-% \section*{For the teacher}
-
-% Swampy and UML
-
-
-% \section*{For the student}
-
-% Try out examples.
-
-% Do the in-chapter examples.
-
-% Where to get the code.
-
-\section*{Acknowledgements}
+(Allen B. Downey)
 
 First and most importantly, I thank Jeff Elkner, who
 translated my Java book into Python, which got this project
@@ -375,319 +365,6 @@ below) who sent in corrections and suggestions.
 And I thank my wife, Lisa, for her work on this book, and Green
 Tea Press, and everything else, too.
 
-
-\section*{Contributor List}
-
-\index{contributors}
-
-More than 100 sharp-eyed and thoughtful readers have sent in
-suggestions and corrections over the past few years.  Their
-contributions, and enthusiasm for this project, have been a
-huge help.
-
-If you have a suggestion or correction, please send email to 
-{\tt feedback@thinkpython.com}.  If I make a change based on your
-feedback, I will add you to the contributor list
-(unless you ask to be omitted).
-
-If you include at least part of the sentence the
-error appears in, that makes it easy for me to search.  Page and
-section numbers are fine, too, but not quite as easy to work with.
-Thanks!
-
-\small
-
-\begin{itemize}
-
-\item Lloyd Hugh Allen sent in a correction to Section 8.4.
-
-\item Yvon Boulianne sent in a correction of a semantic error in
-Chapter 5.
-
-\item Fred Bremmer submitted a correction in Section 2.1.
-
-\item Jonah Cohen wrote the Perl scripts to convert the
-LaTeX source for this book into beautiful HTML.
-
-\item Michael Conlon sent in a grammar correction in Chapter 2
-and an improvement in style in Chapter 1, and he initiated discussion
-on the technical aspects of interpreters.
-
-\item Benoit Girard sent in a
-correction to a humorous mistake in Section 5.6.
-
-\item Courtney Gleason and Katherine Smith wrote {\tt horsebet.py},
-which was used as a case study in an earlier version of the book.  Their
-program can now be found on the website.
-
-\item Lee Harr submitted more corrections than we have room to list
-here, and indeed he should be listed as one of the principal editors
-of the text.
-
-\item James Kaylin is a student using the text. He has submitted
-numerous corrections.
-
-\item David Kershaw fixed the broken {\tt catTwice} function in Section
-3.10.
-
-\item Eddie Lam has sent in numerous corrections to Chapters 
-1, 2, and 3.
-He also fixed the Makefile so that it creates an index the first time it is
-run and helped us set up a versioning scheme.  
-
-\item Man-Yong Lee sent in a correction to the example code in
-Section 2.4.  
-
-\item David Mayo pointed out that the word ``unconsciously"
-in Chapter 1 needed
-to be changed to ``subconsciously".
-
-\item Chris McAloon sent in several corrections to Sections 3.9 and
-3.10.
-
-\item Matthew J. Moelter has been a long-time contributor who sent
-in numerous corrections and suggestions to the book.  
-
-\item Simon Dicon Montford reported a missing function definition and
-several typos in Chapter 3.  He also found errors in the {\tt increment}
-function in Chapter 13.
-
-\item John Ouzts corrected the definition of ``return value"
-in Chapter 3.
-
-\item Kevin Parks sent in valuable comments and suggestions as to how
-to improve the distribution of the book.
-
-\item David Pool sent in a typo in the glossary of Chapter 1, as well
-as kind words of encouragement.
-
-\item Michael Schmitt sent in a correction to the chapter on files
-and exceptions.
-
-\item Robin Shaw pointed out an error in Section 13.1, where the
-printTime function was used in an example without being defined.
-
-\item Paul Sleigh found an error in Chapter 7 and a bug in Jonah Cohen's
-Perl script that generates HTML from LaTeX.
-
-\item Craig T. Snydal is testing the text in a course at Drew
-University.  He has contributed several valuable suggestions and corrections.
-
-\item Ian Thomas and his students are using the text in a programming
-course.  They are the first ones to test the chapters in the latter half
-of the book, and they have made numerous corrections and suggestions.
-
-\item Keith Verheyden sent in a correction in Chapter 3.
-
-\item Peter Winstanley let us know about a longstanding error in
-our Latin in Chapter 3.
-
-\item Chris Wrobel made corrections to the code in the chapter on
-file I/O and exceptions. 
-
-\item Moshe Zadka has made invaluable contributions to this project.
-In addition to writing the first draft of the chapter on Dictionaries, he
-provided continual guidance in the early stages of the book.
-
-\item Christoph Zwerschke sent several corrections and
-pedagogic suggestions, and explained the difference between {\em gleich}
-and {\em selbe}.
-
-\item James Mayer sent us a whole slew of spelling and
-typographical errors, including two in the contributor list.
-
-\item Hayden McAfee caught a potentially confusing inconsistency
-between two examples.
-
-\item Angel Arnal is part of an international team of translators
-working on the Spanish version of the text.  He has also found several
-errors in the English version.
-
-\item Tauhidul Hoque and Lex Berezhny created the illustrations
-in Chapter 1 and improved many of the other illustrations.
-
-\item Dr. Michele Alzetta caught an error in Chapter 8 and sent
-some interesting pedagogic comments and suggestions about Fibonacci
-and Old Maid.
-
-\item Andy Mitchell caught a typo in Chapter 1 and a broken example
-in Chapter 2.
-
-\item Kalin Harvey suggested a clarification in Chapter 7 and
-caught some typos.
-
-\item Christopher P. Smith caught several typos and is helping us
-prepare to update the book for Python 2.2.
-
-\item David Hutchins caught a typo in the Foreword.
-
-\item Gregor Lingl is teaching Python at a high school in Vienna,
-Austria.  He is working on a German translation of the book,
-and he caught a couple of bad errors in Chapter 5.
-
-\item Julie Peters caught a typo in the Preface.
-
-\item Florin Oprina sent in an improvement in {\tt makeTime},
-a correction in {\tt printTime}, and a nice typo.
-
-\item D.~J.~Webre suggested a clarification in Chapter 3.
-
-\item Ken found a fistful of errors in Chapters 8, 9 and 11.
-
-\item Ivo Wever caught a typo in Chapter 5 and suggested a clarification
-in Chapter 3.
-
-\item Curtis Yanko suggested a clarification in Chapter 2.
-
-\item Ben Logan sent in a number of typos and problems with translating
-the book into HTML.
-
-\item Jason Armstrong saw the missing word in Chapter 2.
-
-\item Louis Cordier noticed a spot in Chapter 16 where the code
-didn't match the text.
-
-\item Brian Cain suggested several clarifications in Chapters 2 and 3.
-
-\item Rob Black sent in a passel of corrections, including some
-changes for Python 2.2.
-
-\item Jean-Philippe Rey at Ecole Centrale
-Paris sent a number of patches, including some updates for Python 2.2
-and other thoughtful improvements.
-
-\item Jason Mader at George Washington University made a number
-of useful suggestions and corrections.
-
-\item Jan Gundtofte-Bruun reminded us that ``a error'' is an error.
-
-\item Abel David and Alexis Dinno reminded us that the plural of
-``matrix'' is ``matrices'', not ``matrixes''.  This error was in the
-book for years, but two readers with the same initials reported it on
-the same day.  Weird.
-
-\item Charles Thayer encouraged us to get rid of the semi-colons
-we had put at the ends of some statements and to clean up our
-use of ``argument'' and ``parameter''.
-
-\item Roger Sperberg pointed out a twisted piece of logic in Chapter 3.
-
-\item Sam Bull pointed out a confusing paragraph in Chapter 2.
-
-\item Andrew Cheung pointed out two instances of ``use before def.''
-
-\item C. Corey Capel spotted the missing word in the Third Theorem
-of Debugging and a typo in Chapter 4.
-
-\item Alessandra helped clear up some Turtle confusion.
-
-\item Wim Champagne found a brain-o in a dictionary example.
-
-\item Douglas Wright pointed out a problem with floor division in
-{\tt arc}.
-
-\item Jared Spindor found some jetsam at the end of a sentence.
-
-\item Lin Peiheng sent a number of very helpful suggestions.
-
-\item Ray Hagtvedt sent in two errors and a not-quite-error.
-
-\item Torsten H\"{u}bsch pointed out an inconsistency in Swampy.
-
-\item Inga Petuhhov corrected an example in Chapter 14.
-
-\item Arne Babenhauserheide sent several helpful corrections.
-
-\item Mark E. Casida is is good at spotting repeated words.
-
-\item Scott Tyler filled in a that was missing.  And then sent in
-a heap of corrections.
-
-\item Gordon Shephard sent in several corrections, all in separate
-emails.
-
-\item Andrew Turner {\tt spot}ted an error in Chapter 8.
-
-\item Adam Hobart fixed a problem with floor division in {\tt arc}.
-
-\item Daryl Hammond and Sarah Zimmerman pointed out that I served
-up {\tt math.pi} too early.  And Zim spotted a typo.
-
-\item George Sass found a bug in a Debugging section.
-
-\item Brian Bingham suggested Exercise~\ref{exrotatepairs}.
-
-\item Leah Engelbert-Fenton pointed out that I used {\tt tuple}
-as a variable name, contrary to my own advice.  And then found
-a bunch of typos and a ``use before def.''
-
-\item Joe Funke spotted a typo.
-
-\item Chao-chao Chen found an inconsistency in the Fibonacci example.
-
-\item Jeff Paine knows the difference between space and spam.
-
-\item Lubos Pintes sent in a typo.
-
-\item Gregg Lind and Abigail Heithoff suggested Exercise~\ref{checksum}.
-
-\item Max Hailperin has sent in a number of corrections and
-  suggestions.  Max is one of the authors of the extraordinary {\em
-    Concrete Abstractions}, which you might want to read when you are
-  done with this book.
-
-\item Chotipat Pornavalai found an error in an error message.
-
-\item Stanislaw Antol sent a list of very helpful suggestions.
-
-\item Eric Pashman sent a number of corrections for Chapters 4--11.
-
-\item Miguel Azevedo found some typos.
-
-\item Jianhua Liu sent in a long list of corrections.
-
-\item Nick King found a missing word.
-
-\item Martin Zuther sent a long list of suggestions.
-
-\item Adam Zimmerman found an inconsistency in my instance
-of an ``instance'' and several other errors.
-
-\item Ratnakar Tiwari suggested a footnote explaining degenerate
-triangles.
-
-\item Anurag Goel suggested another solution for \verb"is_abecedarian"
-and sent some additional corrections.  And he knows how to
-spell Jane Austen.
-
-\item Kelli Kratzer spotted one of the typos.
-
-\item Mark Griffiths pointed out a confusing example in Chapter 3.
-
-\item Roydan Ongie found an error in my Newton's method.
-
-\item Patryk Wolowiec helped me with a problem in the HTML version.
-
-\item Mark Chonofsky told me about a new keyword in Python 3.0.
-
-\item Russell Coleman helped me with my geometry.
-
-\item Wei Huang spotted several typographical errors.
-
-\item Karen Barber spotted the the oldest typo in the book.
-
-\item Nam Nguyen found a typo and pointed out that I used the Decorator
-pattern but didn't mention it by name.
-
-\item St\'{e}phane Morin sent in several corrections and suggestions.
-
-\item Paul Stoop corrected a typo in \verb+uses_only+.
-
-% ENDCONTRIB
-
-\end{itemize}
-
-\normalsize
 
 \clearemptydoublepage
 
@@ -18424,6 +18101,135 @@ Remember, the goal is not just to make the program
 work.  The goal is to learn how to make the program work.
 
 
+
+\chapter{Contributor List}
+\section*{Contributor List for ``Python for Informatics''}
+
+TBD
+
+\section*{Contributor List for ``Think Python''}
+
+\index{contributors}
+
+(Allen B. Downey)
+
+More than 100 sharp-eyed and thoughtful readers have sent in
+suggestions and corrections over the past few years.  Their
+contributions, and enthusiasm for this project, have been a
+huge help.
+
+For the detail on the nature of each of the contributions from
+these individuals, see the ``Think Python'' text.
+
+Lloyd Hugh Allen,
+Yvon Boulianne,
+Fred Bremmer,
+Jonah Cohen,
+Michael Conlon,
+Benoit Girard,
+Courtney Gleason and Katherine Smith,
+Lee Harr,
+James Kaylin,
+David Kershaw,
+Eddie Lam,
+Man-Yong Lee,
+David Mayo,
+Chris McAloon,
+Matthew J. Moelter,
+Simon Dicon Montford,
+John Ouzts,
+Kevin Parks,
+David Pool,
+Michael Schmitt,
+Robin Shaw,
+Paul Sleigh,
+Craig T. Snydal,
+Ian Thomas,
+Keith Verheyden,
+Peter Winstanley,
+Chris Wrobel,
+Moshe Zadka,
+Christoph Zwerschke,
+James Mayer,
+Hayden McAfee,
+Angel Arnal,
+Tauhidul Hoque and Lex Berezhny,
+Dr. Michele Alzetta,
+Andy Mitchell,
+Kalin Harvey,
+Christopher P. Smith,
+David Hutchins,
+Gregor Lingl,
+Julie Peters,
+Florin Oprina,
+D.~J.~Webre,
+Ken,
+Ivo Wever,
+Curtis Yanko,
+Ben Logan,
+Jason Armstrong,
+Louis Cordier,
+Brian Cain,
+Rob Black,
+Jean-Philippe Rey at Ecole Centrale Paris,
+Jason Mader at George Washington University made a number
+Jan Gundtofte-Bruun,
+Abel David and Alexis Dinno,
+Charles Thayer,
+Roger Sperberg,
+Sam Bull,
+Andrew Cheung,
+C. Corey Capel,
+Alessandra,
+Wim Champagne,
+Douglas Wright,
+Jared Spindor,
+Lin Peiheng,
+Ray Hagtvedt,
+Torsten H\"{u}bsch,
+Inga Petuhhov,
+Arne Babenhauserheide,
+Mark E. Casida,
+Scott Tyler,
+Gordon Shephard,
+Andrew Turner,
+Adam Hobart,
+Daryl Hammond and Sarah Zimmerman,
+George Sass,
+Brian Bingham,
+Leah Engelbert-Fenton,
+Joe Funke,
+Chao-chao Chen,
+Jeff Paine,
+Lubos Pintes,
+Gregg Lind and Abigail Heithoff,
+Max Hailperin,
+Chotipat Pornavalai,
+Stanislaw Antol,
+Eric Pashman,
+Miguel Azevedo,
+Jianhua Liu,
+Nick King,
+Martin Zuther,
+Adam Zimmerman,
+Ratnakar Tiwari,
+Anurag Goel,
+Kelli Kratzer,
+Mark Griffiths,
+Roydan Ongie,
+Patryk Wolowiec,
+Mark Chonofsky,
+Russell Coleman,
+Wei Huang,
+Karen Barber,
+Nam Nguyen,
+St\'{e}phane Morin,
+and
+Paul Stoop.
+
+% ENDCONTRIB
+
+\normalsize
 
 \printindex
 
